Update src/main/java/org/folio/inventory/resources/AbstractInstances.java
Co-authored-by: julianladisch <julianladisch@users.noreply.github.com>